--- a/bootstrap/css/foursons.css
+++ b/bootstrap/css/foursons.css
@@ -82,25 +82,7 @@ body {
 }
 
 .well-foursons {
-  padding: 10px;
-}
-.tangerine-title {
-  font-family : 'Tangerine', serif;
-  text-shadow: 4px 4px 4px #aaa;
-}
-
-.tangerine-text {
-  font-family : 'Tangerine', serif;
-  text-shadow : 4px 4px 4px #aaa;
-  font-size   : 16px;
-}
-
-@media (min-width: 992px) {
-  .tangerine-text {
-    font-family : 'Tangerine', serif;
-    text-shadow : 4px 4px 4px #aaa;
-    font-size   : 24px;
-  }
+  padding: 5px 5px;
 }
 
 .form-signin {
@@ -118,4 +100,11 @@ body {
 
 .foursons-middle {
   vertical-align: bottom;
+}
+
+.nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
+.nav-pills > li.active > a:focus {
+  color: #ffffff;
+  background-color: #5cb85c;
 }
