--- a/bootstrap/css/fs.css
+++ b/bootstrap/css/fs.css
@@ -1,224 +1,145 @@
 body {
-
-  font-family: 'PT Sans Narrow', sans-serif;
-
-  font-size: 18px;
-
+  font-family: 'Cherry Swash', cursive;
+  font-size: 14px;
 }
-
-
 
 .navbar-inverse .navbar-brand {
-
-	color : #FFF;
-
+  color : #FFF;
 }
-
-
 
 .back {
-
   background: rgba(255, 255, 255, 0.7);
-
   position: absolute;
-
   left: 50%;
-
   bottom: 0;
-
   width: 50px;
-
   height: 30px;
-
   font-size: 26px;
-
   text-align: center;
-
   border-radius: 3px 3px 0 0;
-
   margin-left: -25px;
-
 }
-
-
 
 section {
-
   background: rgba(0, 0, 0, 0.05);
-
   padding: 40px;
-
   padding-bottom: 70px;
-
   position: relative;
-
 }
 
-
-
-.intro,
-
+.content,
 .products,
-
-.contact, .red {
-
+.contact, .red, .white {
   background: transparent;
-
 }
 
-
-
-.intro .back,
-
+.content .back,
 .products .back,
-
 .contact .back,
-
-.red .back {
-
+.red .back, .white .back {
   background: rgba(0, 0, 0, 0.05);
-
 }
-
-
 
 .back span {
-
   color: #450007;
-
 }
-
-
 
 .btn-foursons {
-
   color: #ffffff;
-
   background-color: #450007;
-
   border-color: #4C2152;
-
 }
-
-
 
 .btn-foursons:hover,
-
 .btn-foursons:focus,
-
 .btn-foursons:active,
-
 .btn-foursons.active,
-
 .open .dropdown-toggle.btn-foursons {
-
   color: #ffffff;
-
   background-color: #330005;
-
   border-color: #321836;
-
 }
-
-
 
 .btn-foursons:active,
-
 .btn-foursons.active,
-
 .open .dropdown-toggle.btn-foursons {
-
   background-image: none;
-
 }
-
-
 
 .btn-foursons.disabled,
-
 .btn-foursons[disabled],
-
-fieldset[disabled] .btn-foursons,
-
+.ieldset[disabled] .btn-foursons,
 .btn-foursons.disabled:hover,
-
 .btn-foursons[disabled]:hover,
-
 fieldset[disabled] .btn-foursons:hover,
-
 .btn-foursons.disabled:focus,
-
 .btn-foursons[disabled]:focus,
-
 fieldset[disabled] .btn-foursons:focus,
-
 .btn-foursons.disabled:active,
-
 .btn-foursons[disabled]:active,
-
 fieldset[disabled] .btn-foursons:active,
-
 .btn-foursons.disabled.active,
-
 .btn-foursons[disabled].active,
-
 fieldset[disabled] .btn-foursons.active {
-
   background-color: #450007;
-
   border-color: #330005;
-
 }
-
-
 
 .panel-group .panel .div-foursons {
-
-  background-color: #FFF;
-
-  color: #000;
-
+  background-color: #FFFFFF;
+  color: #450007;
 }
-
-
 
 .footer {
-
   background-color: #450007;
-
   color: #FFF;
-
 }
-
-
 
 .list-group-fs {
-
   border: 0px;
-
 }
-
-
 
 .fs-ok {
-
   color: #5CB85C;
-
 }
-
-
 
 .div-foursons {
-
   background-color: #450007;
-
   color: #FFF;
-
   padding-top: 3px;
-
   padding-bottom: 3px;
-
 }
 
+.navbar-brand {
+  float: left;
+  font-size: 24px;
+}
 
+.navbar-nav > li > a {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  line-height: 26px;
+  font-size: 16px;
+}
 
+.making_heading {
+  font-family: 'Marck Script', cursive;
+}
+
+.panel-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 24px;
+}
+
+.panel-title > small {
+  font-size: 16px;
+}
+
+.wine_title {
+  font-family: 'Marck Script', cursive;
+}
+
+.panel-fs {
+  border : 0px;
+}
